@@ -6,7 +6,7 @@ Commands to load ML files.
 
 signature ML_FILE =
 sig
-  val command: string -> bool option -> (theory -> Token.file) ->
+  val command: string -> bool -> bool option -> (theory -> Token.file) ->
     Toplevel.transition -> Toplevel.transition
   val ML: bool option -> (theory -> Token.file) -> Toplevel.transition -> Toplevel.transition
   val SML: bool option -> (theory -> Token.file) -> Toplevel.transition -> Toplevel.transition
@@ -15,7 +15,7 @@ end;
 structure ML_File: ML_FILE =
 struct
 
-fun command environment debug get_file = Toplevel.generic_theory (fn gthy =>
+fun command environment catch_all debug get_file = Toplevel.generic_theory (fn gthy =>
   let
     val file = get_file (Context.theory_of gthy);
     val provide = Resources.provide_file file;
@@ -24,7 +24,7 @@ fun command environment debug get_file = Toplevel.generic_theory (fn gthy =>
     val _ = Document_Output.check_comments (Context.proof_of gthy) (Input.source_explode source);
 
     val flags: ML_Compiler.flags =
-      {environment = environment, redirect = true, verbose = true,
+      {environment = environment, redirect = true, verbose = true, catch_all = catch_all,
         debug = debug, writeln = writeln, warning = warning};
   in
     gthy
@@ -34,7 +34,7 @@ fun command environment debug get_file = Toplevel.generic_theory (fn gthy =>
     |> Context.mapping provide (Local_Theory.background_theory provide)
   end);
 
-val ML = command "";
-val SML = command ML_Env.SML;
+val ML = command "" false;
+val SML = command ML_Env.SML true;
 
 end;
