@@ -14,6 +14,13 @@ New in this Isabelle version
 before, not "-new-syntax" (Python-like). Minor INCOMPATIBILITY.
 
 
+*** ML ***
+
+* Isabelle/ML explicitly rejects 'handle' with catch-all patterns.
+INCOMPATIBILITY, better use \<^try>\<open>...\<close> with 'catch' or 'finally', or
+as last resort declare [[ML_catch_all]] within the theory context.
+
+
 
 New in Isabelle2023 (September 2023)
 ------------------------------------
